==================
repoze.who changes
==================

Next Release
============

- Fix corner case issue of an exception raised when attempting to log
  when there are no identifiers or authenticators.

1.0.10 (2009/1/23)
==================

- The RedirectingFormPlugin now passes along SetCookie headers set
  into the response by the application within the NotFound response
  (fixes TG2 "flash" issue).

1.0.9 (2008/12/18)
==================

- The RedirectingFormPlugin now attempts to find a header named
  ``X-Authentication-Failure-Reason`` among the response headers set
  by the application when a challenge is issued.  If a value for this
  header exists (and is non-blank), the value is attached to the
  redirect URL's query string as the ``reason`` parameter (or a
  user-settable key).  This makes it possible for downstream
  applications to issue a response that initiates a challenge with
  this header and subsequently display the reason in the login form
  rendered as a result of the challenge.

1.0.8 (2008/12/13)
==================

- The ``PluggableAuthenticationMiddleware`` constructor accepts a
  ``log_stream`` argument, which is typically a file.  After this
  release, it can also be a PEP 333 ``Logger`` instance; if it is a
  PEP 333 ``Logger`` instance, this logger will be used as the
  repoze.who logger (instead of one being constructed by the
  middleware, as was previously always the case).  When the
  ``log_stream`` argument is a PEP 333 Logger object, the
  ``log_level`` argument is ignored.

1.0.7 (2008/08/28)
==================

- ``repoze.who`` and ``repoze.who.plugins`` were not added to the
  ``namespace_packages`` list in setup.py, potentially making 1.0.6 a
  brownbag release, given that making these packages namespace
  packages was the only reason for its release.

1.0.6 (2008/08/28)
==================

- Make repoze.who and repoze.who.plugins into namespace packages
  mainly so we can allow plugin authors to distribute packages in the