@@ -5,6 +5,10 @@ repoze.who changes
 Next Release
 ============
 
+- Fix auth_tkt plugin; cookie values are now quoted, making it possible
+  to put spaces and other whitespace, etc in usernames. (thanks to Michael
+  Pederson).
+
 - Fix corner case issue of an exception raised when attempting to log
   when there are no identifiers or authenticators.
 
